=== HEAD

* Fix plugin loading when plugin module name is the same as an already defined top level constant (jeremyevans)

* Add an AS400 JDBC subadapter (need jt400.jar in classpath) (jeremyevans, bhauff)

* Fix the emulated MSSQL offset support when core extensions are not used (jeremyevans)

* Make Sequel::BasicObject work correctly on Rubinius (kronos)

* Add the :eager_loader_key option to associations, useful for custom eager loaders (jeremyevans)

* Dataset#group_and_count no longer orders by the count (jeremyevans)

* Fix Dataset#limit on MSSQL 2000 (jeremyevans)

* Support eagerly load nested associations when lazily loading *_to_one associations using the :eager option (jeremyevans)

* Fix the one_to_one setter to work with a nil argument (jeremyevans)

* Cache one_to_one associations like many_to_one associations instead of one_to_many associations (jeremyevans)

* Use the singular form for one_to_one association names instead of the plural form (john_firebaugh)

* Add real one_to_one associations, using the :one_to_one option of one_to_many is now an error (jeremyevans)

* Add Model#lock! which uses Dataset#for_update to lock model rows (jeremyevans)

* Add Dataset#for_update as a standard dataset method (jeremyevans)

* Add composition plugin, simlar to ActiveRecord's composed_of (jeremyevans)

* Combine multiple complex expressions for simpler SQL and object tree (jeremyevans)

* Add Dataset#first_source_table, for the unaliased version of the table for the first source (jeremyevans)

* Raise a more explicit error if attempting to use the sqlite adapter with sqlite3 instead of sqlite3-ruby (jeremyevans)

=== 3.9.0 (2010-03-04)

* Allow loading adapters and extensions from outside of the Sequel lib directory (jeremyevans)

* Make limit and offset work as bound variables in prepared statements (jeremyevans)

* In the single_table_inheritance plugin, handle case where the sti_key is nil or '' specially (jeremyevans) (#287)
